refactor: Was remove unnecessary links

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -7,10 +7,12 @@
         },
         "menubox": {
             "megaMenu": {
+                "home": "Home",
                 "shop": "Shop"
             },
             "mobileMenu": {
                 "close": "Close Menu",
+                "home": "Home",
                 "shop": "Shop",
                 "login": "Login",
                 "register": "Register",
